[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "GenomeVisualizer"
version = "0.0.1"
author = [{ name="Varga Henrietta"},]
maintainer = [{ name="Varga Henrietta", email = "varga.henrietta.julianna@hallgato.ppke.hu"},]
description = "A toolbox for "
readme = {file = "README.md", content-type = "text/markdown"}
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
"Development Status :: 1 - Planning",
"Programming Language :: Python :: 3.12",
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
"Operating System :: OS Independent",
"Topic :: Scientific/Engineering"
]
dependencies = [
"random>=2.2.2"
]
[project.urls]
Homepage = "https://github.com/vargaheni05/pyTSPA-toolbox"
Documentation = "https://pyTSPA-toolbox.readthedocs.io/en/latest/"
Repository = "https://github.com/vargaheni05/pyTSPA-toolbox.git"
Issues = "https://github.com/vargaheni05/pyTSPA-toolbox/issues"
[tool.setuptools]
packages = ["GenomeVisualizer"]
[tool.setuptools.package-data]
data = ["*.csv"]