[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "GenomeVisualizer"
version = "0.0.1"
authors = [
    { name = "Varga Henrietta" }
]
maintainers = [
    { name = "Varga Henrietta", email = "varga.henrietta.julianna@hallgato.ppke.hu" }
]
description = "A toolbox for detecting DNA replication origins and regulatory motifs in genomic sequences"
readme = {file = "README.md", content-type = "text/markdown"}
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
"Development Status :: 1 - Planning",
"Programming Language :: Python :: 3.12",
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
"Operating System :: OS Independent",
"Topic :: Scientific/Engineering"
]
dependencies = [
"matplotlib>=3.9.2"
]
[project.urls]
Homepage = "https://github.com/vargaheni05/GenomeVisualizer"
Documentation = "https://genomevisualizer.readthedocs.io/en/latest/"
Repository = "https://github.com/vargaheni05/GenomeVisualizer.git"
Issues = "https://github.com/vargaheni05/GenomeVisualizer/issues"
[tool.setuptools]
packages = ["GenomeVisualizer"]
